fix: header being too large

--- a/css/header.css
+++ b/css/header.css
@@ -9,7 +9,7 @@ html {
     scroll-behavior: smooth;
 }
 header{
-    width: 100vw;
+    width: 100%;
     z-index: 100;
 }
 
